# lettura

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.dev  Dockerfile.test  LICENSE  README.md  audit.toml  dev.sh  docker-compose.test.yml  docker-compose.yml  skills-lock.json
.cargo/: audit.toml
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: api_types.rs  cli.rs  client.rs  config.rs  error.rs  filter.rs  lib.rs  main.rs  output.rs  skill_asset.rs
cli/src/commands/: audit_logs.rs  config.rs  get.rs  list.rs  login.rs  mod.rs  pages.rs  save.rs  search.rs  skill.rs  state.rs  tag.rs  tags.rs  whoami.rs
cli/tests/: client.rs  config.rs  filter.rs  list_cmd.rs  save_cmd.rs  skill_cmd.rs  skill_lint.rs  write_cmds.rs
docs/: api.md  poc-evaluation.md
docs/plans/: 2026-03-28-plan1-extraction-poc.md  2026-03-28-plan2a-db-auth.md  2026-03-28-plan2b-entry-crud-fetch.md  2026-03-29-plan3a-tags-annotations-memos.md  2026-03-29-plan3b-fulltext-search.md  2026-03-29-plan4a-critical-optimizations.md  2026-03-29-plan4b-improvement-optimizations.md  2026-04-17-arch-fixes-phase1.md  2026-04-17-arch-fixes-phase2.md  2026-04-17-arch-fixes-phase3.md  2026-04-17-pages-display.md  2026-04-18-site-config-plan.md  2026-04-21-pwa-support.md  2026-04-23-cli-plan.md  2026-04-23-fetch-pipeline-redesign-plan.md  2026-04-26-residual-optimizations.md  2026-05-10-ui-ux-optimizations.md  2026-05-16-fetch-queue-persistence-plan.md  tag-navigation.md  ui-ux-optimization-roadmap.md
docs/specs/: 2026-03-28-lettura-design.md  2026-03-29-optimization-design.md  2026-03-29-release-funcional-design.md  2026-04-17-pages-display-design.md  2026-04-18-site-config-design.md  2026-04-21-pwa-support-design.md  2026-04-23-cli-design.md  2026-04-23-fetch-pipeline-redesign.md  2026-04-29-architecture-optimization.md  2026-05-16-fetch-queue-persistence.md  2026-05-17-backup-format.md  2026-05-17-remaining-optimizations.md
docs/superpowers/plans/: 2026-04-20-shadcn-ui-redesign.md  2026-05-03-global-optimization.md  2026-05-03-mobile-ux-optimization.md  2026-05-03-tag-features.md  2026-05-04-backend-core-test-coverage.md  2026-05-04-security-hardening.md  2026-05-05-extension-token-auth.md  2026-05-05-release-skill.md  2026-05-10-cli-pages.md
docs/superpowers/specs/: 2026-04-17-page-reupload-design.md  2026-04-20-shadcn-ui-redesign-design.md  2026-05-03-mobile-ux-optimization-design.md  2026-05-03-tag-features-design.md  2026-05-04-backend-core-test-coverage-design.md  2026-05-05-extension-token-auth-design.md  2026-05-05-release-skill-design.md  2026-05-10-cli-pages-design.md
extension/: background.js  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  popup.css  popup.html  popup.js  tsconfig.json  vite.config.ts
extension/scripts/: postbuild.mjs
extension/src/: manifest.json
extension/src/background/: index.ts
extension/src/popup/: App.tsx  index.html  index.ts  styles.css
extension/src/shared/: api.ts  storage.ts  types.ts
migrations/: 001_create_users.sql  002_create_refresh_tokens.sql  003_create_entries.sql  004_create_tags.sql  005_create_annotations.sql  006_create_memos.sql  007_create_tagging_rules.sql  008_create_site_rules.sql  009_gin_indexes.sql  010_soft_delete.sql  011_composite_indexes.sql  012_create_pages.sql  013_add_page_expires_at.sql  014_create_personal_access_tokens.sql  015_create_audit_logs.sql  016_create_image_process_jobs.sql  017_add_audit_actions_rename_delete.sql  018_hash_page_passwords.sql  019_add_refresh_token_family.sql  020_add_import_lettura_audit_action.sql  021_create_fetch_jobs.sql
scripts/: generate_expected.js  install-cli.sh  release.sh
site-configs/: 36kr.com.txt  github.com.txt  juejin.cn.txt  medium.com.txt  nytimes.com.txt  reddit.com.txt  sspai.com.txt  stackoverflow.com.txt  theguardian.com.txt  twitter.com.txt  zhihu.com.txt  zhuanlan.zhihu.com.txt
site-configs-local/: github.com.yaml  medium.com.yaml  zhuanlan.zhihu.com.yaml
skills/: lettura.md
src/: audit.rs  config.rs  db.rs  lib.rs  main.rs  metrics.rs  rate_limit.rs  search.rs  spa.rs  state.rs
src/api/: admin.rs  annotations.rs  audit_logs.rs  auth.rs  backup.rs  bulk.rs  entries.rs  error.rs  export.rs  feed.rs  fetch_jobs.rs  health.rs  import.rs  memos.rs  mod.rs  openapi.rs  pages.rs  pages_public.rs  site_rules.rs  skills.rs  tagging_rules.rs  tags.rs  tokens.rs  validate.rs
src/auth/: jwt.rs  middleware.rs  password.rs
src/cache/: mod.rs
src/extract/: metadata.rs  mod.rs  preprocess.rs  readability.rs  sanitize.rs  scoring.rs
src/fetch/: http.rs  json_extract.rs  mod.rs  pipeline.rs  render.rs  rewrite.rs  ssrf.rs
src/middleware/: mod.rs  request_id.rs
src/models/: annotation.rs  audit_log.rs  entry.rs  error.rs  fetch_job.rs  image_process_job.rs  memo.rs  mod.rs  page.rs  pat.rs  serde_helpers.rs  site_rule.rs  tag.rs  tagging_rule.rs  user.rs
src/services/: pages.rs
src/site_config/: mod.rs  parser.rs  store.rs
src/storage/: local.rs  mod.rs  oss.rs
src/tasks/: fetch_worker.rs  fetcher.rs  image_processor.rs  mod.rs
tests/: auth_me.rs  bulk_api.rs  cli_contract.rs  entries_filter.rs  extraction_test.rs  integration_annotations.rs  integration_audit_logs.rs  integration_auth.rs  integration_entries.rs  integration_fetch_jobs.rs  integration_fetch_jobs_admin.rs  integration_health.rs  integration_import_export.rs  integration_memos.rs  integration_pages.rs  integration_rules.rs  integration_search.rs  integration_security.rs  integration_spa.rs  integration_tags.rs  pat_auth.rs  pat_dao.rs  remove_tag_by_label.rs  save_idempotency.rs  skill_endpoint.rs  tag_ensure_link.rs  tokens_api.rs
tests/common/: mod.rs
tests/fixtures/: blog_en_simple.expected.json  blog_en_simple.html
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
web/src/: App.tsx  env.d.ts  index.css  main.tsx
web/src/api/: annotations.ts  auditLogs.ts  auth.ts  client.ts  (+9 more)
(+61 files in other folders)
