[package]
name = "lettura"
version = "0.1.0"
edition = "2024"

[features]
# Enable the optional Chromium-based render fallback. Turning it off removes
# chromiumoxide (and the need for a chromium binary at runtime), shrinking the
# image significantly.
default = ["rendering"]
rendering = ["dep:chromiumoxide", "dep:futures-util"]

[dependencies]
# Content extraction
scraper = "0.22"
ego-tree = "0.10"
ammonia = "4"
regex = "1"
once_cell = "1"
unicode-segmentation = "1.12"
url = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Error handling
thiserror = "2"

# Web framework
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "set-header"] }

# Rate limiting
governor = "0.10"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Auth
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# HTTP client + hashing
reqwest = { version = "0.12", features = ["json", "cookies", "socks"] }
sha1 = "0.10"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }

# Storage (S3-compatible OSS)
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }
async-trait = "0.1"

# SPA static files
rust-embed = "8"
mime_guess = "2"

# Search
tantivy = "0.22"
tempfile = "3"
zip = "2"

# Config
dotenvy = "0.15"

# Rendering fallback (optional, enabled by the `rendering` feature)
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false, optional = true }
futures-util = { version = "0.3", optional = true }

[dev-dependencies]
pretty_assertions = "1"
