[package]
name = "lettura-cli"
version.workspace = true
edition.workspace = true

[lib]
name = "lettura_cli"
path = "src/lib.rs"

[[bin]]
name = "lettura-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-std"] }
toml = "0.8"
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
rust-embed = { version = "8", features = ["include-exclude"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
html2text = "0.12"
urlencoding = "2"
terminal_size = "0.4"

zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
httpmock = "0.7"
